--- a/css/index.css
+++ b/css/index.css
@@ -66,13 +66,12 @@
 .topmeau .li_Select{ background-color:#fc0146;}
 .topmeau .li_Select  a{ color:#fff;}
 .topmeau .fengeLiCss{}
-.fontclr{ color:#fontclr;}
 
 
 .ctitle_index{ width:100%; height:58px; border:0px; border-bottom:solid 2px #cfcfcf; text-align:left;}
 .ctitle_index span{ font-size:25px;font-family: '微软雅黑','幼圆'; font-weight:bold; line-height:58px; text-align:left;color:#333;}
 .ctitle_index font{ font-size:18px;font-family: '微软雅黑','幼圆';   line-height:58px; text-align:left;color:#ccc;}
-.ftyle_index{ width100%; height:40px; text-align:left; line-height:40px;}
+.ftyle_index{ width:100%; height:40px; text-align:left; line-height:40px;}
 .ftyle_index  span{ font-size:14px; background-color:#d0ad6b; border:solid 1px #fff; padding:5px; padding-left:8px; padding-right:8px;color:#FFF;}
 .ftyle_index .acls{color:#6e6d6d; font-size:14px;font-family: '微软雅黑','幼圆';}
 .ftyle_index .acls:hover{color:#FC0;}
@@ -146,7 +145,7 @@
 .cnewshref span{ float:right; margin-right:20px; color:#999;}
 .morehref{background-color:#cfcfcf; color:#8b8b8b; padding:1px; padding-left:6px; padding-right:6px; font-size:12px; float:right; margin-top:6px;}
 
-.ContactusDiv{ float:left; width:250px; height:100$; overflow:hidden;}
+.ContactusDiv{ float:left; width:250px; height:100; overflow:hidden;}
 .productsDiv{ float:right; margin-right:0px auto; width:740px;}
 
 
@@ -254,7 +253,7 @@
     .cRightTitle{font-size:14px; color:#cc0200; margin-top:0px; margin-left:28px; padding-top:10px;font-family:'幼圆', '微软雅黑'; height:30px; }  
 		.cRightTitleBk{ background-image:url("gm-product.jpg"); background-repeat:no-repeat; margin:0px auto; padding:0px auto; background-position:8px; text-indent:30px;color:#c80201; font-weight:bold; }
 		.cRightTitle a{color:#c80201; font-weight:bold; font-size:13px;}
-	.cRight12{width:512px; height:180px;  margin-top:0px; margin-left:8px; overflow:hidden; color:#888989;color:#FFF\9;}	
+	.cRight12{width:512px; height:180px;  margin-top:0px; margin-left:8px; overflow:hidden; color:#888989;color:#FFF;}	
   .contRight12{width:227px; height:232px; background-image:url("gm-title2.jpg"); background-repeat:no-repeat; float:left; margin:0px auto; padding:0px auto;}
 .contRight2{width:100%; height:280px; overflow:hidden; float:left; margin:0px auto; padding:0px auto; margin-top:1px;}
 	.contRight12_news{margin:0px auto; padding:0px auto; background-image:url("gm-titlte2.jpg"); height:34px; }
@@ -504,7 +503,7 @@
 
 .footercls,.footercls a{color:#fff;}
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {;
+@media only screen and (min-width: 768px) and (max-width: 959px) {
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
