--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@
 .bkuang{ border:solid 1px #dcdcdc; background-color:#ffffff;}
 
 .topred{ width:100%;height:5px; background-color:#b4251d;margin:0px auto; padding:0px auto;}
-.toplog_div{overflow:hidden; }
+.toplog_div{overflow:hidden; width: 100%; position: fixed; background-color: #fff;}
 .tophead{height:132px; background-image:url("xmz-topbk.jpg"); background-repeat:repeat-x; z-index:100000; overflow:hidden;}
 
 .shoucang-cls{ float:left; width:50px;}
@@ -44,9 +44,7 @@
 .shoucang-cls2{  margin-left:30px;}
 .shoucang-cls a{ color:#666; line-height:30px;}
 
-
-
-
+#cover{ border-bottom:solid 1px #ddd; margin-top: 120px;}
 #toplog{/*width:565px;*/ height:100%; float:left; margin:0px auto; }
 
 #toplang{width:370px; height:100%; float:right; margin-right:0px; margin-top:0px; text-align:right; padding-top:10px;}
@@ -56,13 +54,13 @@
 	.hs-topsc ul li a{ color:#333; font-size:10px;line-height:31px;}
 	.hs-topsc ul li a:hover{ color:red; font-size:10px;line-height:31px;}
 
-.topmeau{ width:100%; height:35px; overflow:hidden; background-color:#005bac /*#d40e43*/; }
+.topmeau{ width:100%; height:40px; overflow:hidden; position: fixed; top: 80px; background-color:#005bac /*#d40e43*/; }
 .homescls{ background-image:url("homecls.png"); background-repeat:no-repeat;  background-position:20px -2px;}
 
 
 .topmeau ul{ list-style:none; border:none; margin:0px auto; padding:0px auto;}
 .topmeau ul li{ float:left; width:135px; text-align:center; line-height:30px; margin:0px auto; padding:0px auto; background-color:none; margin-left:0px; height:43px;}
-.topmeau ul li a{ color:#fff; font-size:16px;font-family: '微软雅黑','幼圆'; font-weight:200; line-height:35px;}
+.topmeau ul li a{ color:#fff; font-size:16px;font-family: '微软雅黑','幼圆'; font-weight:200; line-height:40px;}
 .topmeau ul li:hover a:hover{color:#FC6}
 .topmeau .li_Select{ background-color:#fc0146;}
 .topmeau .li_Select  a{ color:#fff;}
@@ -283,7 +281,7 @@
 .conNeiTitle{ width:100%; height:40px; color:#666; font-size:14px;  line-height:40px;  margin-bottom:10px; text-align:left;  padding-top:10px;  background-repeat:repeat-x}
 .conNeiText div,.conNeiText p,.conNeiText span{ text-align:left;font-family:'微软雅黑','幼圆'!important;}
 
-.divleft{ width:100%; height:50px; color:#fff; background-color:#d40e43; font-size:16px; line-height:45px; font-family:'微软雅黑','幼圆'; text-indent:10px;}
+.divleft{ width:100%; height:50px; color:#fff; background-color:#005bac; font-size:16px; line-height:45px; font-family:'微软雅黑','幼圆'; text-indent:10px;}
 
 #warp {
 	PADDING-BOTTOM: 0px; MARGIN: 0px; PADDING-LEFT: 0px; WIDTH: 100%; PADDING-RIGHT: 0px; HEIGHT: 350px;; PADDING-TOP: 0px;
