--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,8 @@
 .shoucang-cls2{  margin-left:30px;}
 .shoucang-cls a{ color:#666; line-height:30px;}
 
-#cover{ width:1060px;border-bottom:solid 1px #ddd; margin-top: 120px;}
+#logo{ height: 70px;}
+#cover{ width:1060px;border-bottom:solid 1px #ddd; margin-top: 110px;}
 #toplog{/*width:565px;*/ height:100%; float:left; margin:0px auto; }
 
 #toplang{width:370px; height:100%; float:right; margin-right:0px; margin-top:0px; text-align:right; padding-top:10px;}
@@ -54,7 +55,7 @@
 	.hs-topsc ul li a{ color:#333; font-size:10px;line-height:31px;}
 	.hs-topsc ul li a:hover{ color:red; font-size:10px;line-height:31px;}
 
-.topmeau{ width:100%; height:40px; overflow:hidden; position: fixed; top: 80px; background-color:#005bac /*#d40e43*/; }
+.topmeau{ width:100%; height:40px; overflow:hidden; position: fixed; top: 70px; background-color:#005bac /*#d40e43*/; }
 .homescls{ background-image:url("homecls.png"); background-repeat:no-repeat;  background-position:20px -2px;}
 
 
